added utilities file

--- a/DictionaryLearning.ipynb
+++ b/DictionaryLearning.ipynb
@@ -14,17 +14,7 @@
     "from sklearn.datasets import load_digits, make_sparse_coded_signal\n",
     "import matplotlib.pyplot as plt \n",
     "import numpy as np\n",
-    "\n",
-    "def show_digits(U,m,n):\n",
-    "    fig, ax = plt.subplots(m,n)\n",
-    "    k = 0\n",
-    "    for i in range(m):\n",
-    "        for j in range(n):\n",
-    "            ax[i,j].imshow(U[k,:].reshape(8,8),cmap='gray')\n",
-    "            ax[i,j].set_xticks([])\n",
-    "            ax[i,j].set_yticks([])\n",
-    "            k += 1\n",
-    "    fig.tight_layout()"
+    "from utilities import *"
    ]
   },
   {
