--- a/LinearFilters.ipynb
+++ b/LinearFilters.ipynb
@@ -303,6 +303,40 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The link with the previous least-squares formulation is *Maximul Likelihood estimate*:\n",
+    "\n",
+    "$$\\max_u \\exp\\left(\\frac{1}{2\\delta^2} \\|Ku - f^\\delta\\|_2^2\\right)\\exp\\left(\\frac{1}{2\\lambda} \\|Ru\\|_2^2\\right).$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Other noise models are possible as well, with *Poisson noise* being popular for many imaging applications:\n",
+    "\n",
+    "$$f^\\delta \\sim \\text{Poisson}(Ku),$$\n",
+    "\n",
+    "which leads to\n",
+    "\n",
+    "$$\\max_u \\left(\\prod_{i=1}^n \\left(Ku\\right)_i^{f^\\delta_i} \\exp\\left(-(Ku)_i\\right)\\right)\\exp\\left(\\frac{1}{2\\lambda} \\|Ru\\|_2^2\\right),$$\n",
+    "\n",
+    "or\n",
+    "\n",
+    "$$\\min_u \\sum_{i=1}^n f^\\delta_i \\log\\left(Ku\\right)_i - \\left(Ku\\right)_i + \\frac{1}{2\\lambda} \\|Ru\\|_2^2.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -316,7 +350,8 @@
     "where $\\alpha \\in (0,1/\\|K\\|_2)$\n",
     "\n",
     "* Pick a suitable value for $\\alpha$ and investigate what happens during the iterations. Does the initial iterate make a difference in the performance of the method?\n",
-    "* Make a bias-variance plot as function of the iteration count. Can we say that the iteration count acts as a regularisation parameter?"
+    "* Make a bias-variance plot as function of the iteration count. Can we say that the iteration count acts as a regularisation parameter?\n",
+    "* What would you consider the optimal value of the regularisation parameter? Could you think of a way to estimate it given that you know the actual noise level?"
    ]
   },
   {
@@ -364,13 +399,6 @@
     "# plot\n",
     "plot_images([f_delta,u_est], ['',''])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
