--- a/MachineLearning.ipynb
+++ b/MachineLearning.ipynb
@@ -1,14 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Machine Learning\n",
+    "\n",
+    "* Supervised\n",
+    "* Unsupervised\n",
+    "* Regularisating effect and importance of training data"
+   ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python (astra)",
    "language": "python",
