--- a/MachineLearning.ipynb
+++ b/MachineLearning.ipynb
@@ -14,6 +14,55 @@
     "* Unsupervised\n",
     "* Regularisating effect and importance of training data"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Supervised learning\n",
+    "\n",
+    "Given samples of noisy images $\\{f^\\delta_i\\}_{i=1}^n$ and corresponding ground truths $\\{u_i\\}_{i=1}^n$, find a function such that $$F(f_i^\\delta) \\approx u_i.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* A popular way to parametrise such a function is by a neural network\n",
+    "* "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Unsupervised learning\n",
+    "\n",
+    "Given samples $\\{u_i\\}_{i=1}^n$, extract information that "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
