fixed bug in TV_decon

--- a/Optimisation.ipynb
+++ b/Optimisation.ipynb
@@ -154,7 +154,7 @@
     "    while not converged:\n",
     "        r = K(u,psf,mode='forward') - f\n",
     "        v = u - lmbda*K(r,psf,mode='adjoint')\n",
-    "        up = denoise_tv_chambolle(v, weight = alpha, eps=1e-6, n_iter_max=5000)\n",
+    "        up = denoise_tv_chambolle(v, weight = lmbda*alpha, eps=1e-6, n_iter_max=5000)\n",
     "        \n",
     "        du = np.linalg.norm(u - up)\n",
     "        it += 1\n",
